--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,10 @@
 language: csharp
+solution: NETStandard.Library.Extension.sln
+dotnet: 1.0.0-preview2-003131
 
-matrix:
-  include:
-    - os: linux # Ubuntu 14.04
-      dist: trusty
-      sudo: required
-      dotnet: 1.0.0-preview2-003131
-
+install:
+  - nuget restore NETStandard.Library.Extension.sln
+  - nuget install xunit.runners -Version 1.9.2 -OutputDirectory testrunner
 script:
-  # Build the source
-  - cd src/Whathecode.System
-  - dotnet restore
-  - dotnet build
-  
-  # Back to main
-  - cd ../../
-  
-  # Run tests
-  - cd test/Whathecode.System.Tests
-  - dotnet restore
-  - dotnet test
+  - xbuild /p:Configuration=Release NETStandard.Library.Extension.sln
+  - mono ./testrunner/xunit.runners.1.9.2/tools/xunit.console.clr4.exe ./Whathecode.System.Tests/bin/Release/Whathecode.System.Tests.dll
