--- a/test/Whathecode.System.Tests/Whathecode.System.Tests.csproj
+++ b/test/Whathecode.System.Tests/Whathecode.System.Tests.csproj
@@ -1,5 +1,9 @@
 ﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" />
+  <PropertyGroup Label="Configuration">
+    <OutputPath>
+    </OutputPath>
+  </PropertyGroup>
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.0</TargetFramework>
