--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: csharp
-solution: NETStandard.Library.Extension.sln
 
 matrix:
   include:
@@ -8,10 +7,16 @@ matrix:
       sudo: required
       dotnet: 1.0.0-preview2-003131
 
-install:
-  - nuget restore NETStandard.Library.Extension.sln
-  - nuget install xunit.runners -Version 1.9.2 -OutputDirectory testrunner
 script:
-  - xbuild /p:Configuration=Release NETStandard.Library.Extension.sln
-  - mono ./testrunner/xunit.runners.1.9.2/tools/xunit.console.clr4.exe ./test/Whathecode.System.Tests/bin/Release/netcoreapp1.0/Whathecode.System.Tests.dll
+  # Build the soruce
+  - cd src/Whathecode.System
+  - dotnet restore
+  - dotnet build
   
+  # Back to main
+  - cd ../../
+  
+  # Run tests
+  - cd test/Whathecode.System.Tests
+  - dotnet restore
+  - dotnet test
