Fixed project.json files for Travis.

--- a/src/Whathecode.System/Whathecode.System.csproj
+++ b/src/Whathecode.System/Whathecode.System.csproj
@@ -14,6 +14,9 @@
     <EmbeddedResource Include="compiler\resources\**\*" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="project.json" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk">
       <Version>1.0.0-alpha-20161104-2</Version>
       <PrivateAssets>All</PrivateAssets>
@@ -22,6 +25,7 @@
       <Version>1.6.1</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Label="Configuration">
     <OutputPath>
     </OutputPath>
