--- a/test/Whathecode.System.Tests/Whathecode.System.Tests.csproj
+++ b/test/Whathecode.System.Tests/Whathecode.System.Tests.csproj
@@ -13,6 +13,7 @@
     <EmbeddedResource Include="**\*.resx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="project.json" />
     <Content Include="xunit.runner.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
