--- a/src/Whathecode.System/project.json
+++ b/src/Whathecode.System/project.json
@@ -1,13 +1,13 @@
 {
- -  "version": "1.0.0-*",
- -
- -  "dependencies": {
- -    "NETStandard.Library": "1.6.1"
- -  },
- -
- -  "frameworks": {
- -    "netstandard1.6": {
- -      "imports": "dnxcore50"
- -    }
- -  }
- -}
+  "version": "1.0.0-*",
+
+  "dependencies": {
+    "NETStandard.Library": "1.6.1"
+  },
+
+  "frameworks": {
+    "netstandard1.6": {
+      "imports": "dnxcore50"
+    }
+  }
+}
