--- a/test/Whathecode.System.Tests/Whathecode.System.Tests.csproj
+++ b/test/Whathecode.System.Tests/Whathecode.System.Tests.csproj
@@ -13,10 +13,10 @@
     <EmbeddedResource Include="**\*.resx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="project.json" />
-    <Content Include="xunit.runner.json">
+    <None Include="project.json" />
+    <None Include="xunit.runner.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.App">
