Updates travis configuration to attempt to fix build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: csharp
+solution: NET-Standard-Library-Extension.sln
 
-matrix:
-  include:
-    - os: linux # Ubuntu 14.04
-      dist: trusty
-      sudo: required
-      dotnet: 1.0.0-preview2-003131
+dotnet: 1.0.0-preview2-003131
+mono: none
+env: DOTNETCORE=1
 
 script:
   # Build the source
