--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: csharp
 os: linux
 sudo: required
 dist: trusty
-dotnet: 1.0.0-preview2-003131
+dotnet: 1.0.1
 env: DOTNETCORE=1
 mono: none
 
